Added z-index to menu.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -66,6 +66,7 @@ body {
 					@include prepend(7);
 					@include append(9);
 					position:absolute;
+					z-index:10;
 				ul {
 					/*------------------------------------*\
 						NAV
